--- a/composer.json
+++ b/composer.json
@@ -98,6 +98,7 @@
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^6.2",
         "symfony/stopwatch": "6.2.*",
-        "symfony/web-profiler-bundle": "6.2.*"
+        "symfony/web-profiler-bundle": "6.2.*",
+        "symfony/webpack-encore-bundle": "^1.16"
     }
 }
