--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,26 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+# config/routes.yaml
+app_dashboard:
+    path:          /
+    controller:    Symfony\Bundle\FrameworkBundle\Controller\TemplateController
+    defaults:
+        # the path of the template to render
+        template:  'static/dashboard.html.twig'
+
+        # the response status code (default: 200)
+        statusCode: 200
+
+        # special options defined by Symfony to set the page cache
+        maxAge:    86400
+        sharedAge: 86400
+
+        # whether or not caching should apply for client caches only
+        private: true
+
+        # optionally you can define some arguments passed to the template
+        context:
+            site_name: 'ACME'
+            theme: 'dark'
